<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/calendarPreImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="14dp"
                android:src="@mipmap/arrow_left"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/calendarTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/calendarNextImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="14dp"
                android:src="@mipmap/arrow_right"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="周日"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Mon"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Tus"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Wes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Thus"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Fri"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_Sat"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_size" />

    </LinearLayout>

    <com.android.zd112.view.CalendarView
        android:id="@+id/calendar_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingTop="10dp" />
</LinearLayout>
